[gd_scene load_steps=25 format=2]

[ext_resource path="res://DeckSelector.tscn" type="PackedScene" id=1]
[ext_resource path="res://Base.gd" type="Script" id=2]
[ext_resource path="res://assets/sprite_judge.png" type="Texture" id=3]
[ext_resource path="res://assets/font18.tres" type="DynamicFont" id=4]
[ext_resource path="res://simpleTheme.tres" type="Theme" id=5]
[ext_resource path="res://assets/card_back.png" type="Texture" id=6]
[ext_resource path="res://assets/btn_1.png" type="Texture" id=7]
[ext_resource path="res://CardBase.tscn" type="PackedScene" id=8]
[ext_resource path="res://assets/sprite_all .png" type="Texture" id=9]
[ext_resource path="res://assets/redArrow3.png" type="Texture" id=10]

[sub_resource type="DynamicFontData" id=1]
font_path = "res://assets/theme/alegreya-sans.medium.ttf"

[sub_resource type="DynamicFont" id=16]
size = 72
use_filter = true
font_data = SubResource( 1 )

[sub_resource type="DynamicFont" id=20]
size = 48
use_filter = true
font_data = SubResource( 1 )

[sub_resource type="DynamicFontData" id=21]
font_path = "res://assets/theme/alegreya-sans.medium.ttf"

[sub_resource type="DynamicFont" id=22]
size = 40
use_filter = true
font_data = SubResource( 21 )

[sub_resource type="StreamTexture" id=7]
flags = 4
load_path = "res://.import/sprite_business.png-9731ff158bc1fbb7cf74c07d80b80e41.stex"

[sub_resource type="StreamTexture" id=8]
flags = 4
load_path = "res://.import/sprite_hardware.png-f4b491323c8f20a1d1625c87d3ef4ac9.stex"

[sub_resource type="StreamTexture" id=9]
flags = 4
load_path = "res://.import/sprite_software.png-9397881092a6d84912d3cb18b91f1ce2.stex"

[sub_resource type="DynamicFont" id=14]
size = 48
use_filter = true
font_data = SubResource( 1 )

[sub_resource type="DynamicFont" id=15]
size = 28
use_filter = true
font_data = SubResource( 1 )

[sub_resource type="DynamicFont" id=12]
size = 72
use_filter = true
font_data = SubResource( 1 )

[sub_resource type="DynamicFont" id=13]
size = 32
use_filter = true
font_data = SubResource( 1 )

[sub_resource type="StreamTexture" id=10]
flags = 4
load_path = "res://.import/left-arrow.png-dba40b976d75597dca4e8b8a98b7b10b.stex"

[sub_resource type="StreamTexture" id=11]
flags = 4
load_path = "res://.import/right-arrow.png-3388a50e60f4bd5025494aba2d1c3a77.stex"

[node name="Node2D" type="Node2D"]
script = ExtResource( 2 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 1600.0
margin_bottom = 900.0

[node name="HomeScene" type="Node2D" parent="."]
visible = false

[node name="text_title" type="Label" parent="HomeScene"]
margin_left = 80.0
margin_top = 80.0
margin_right = 1520.0
margin_bottom = 160.0
theme = ExtResource( 5 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 16 )
text = "Title"
align = 1

[node name="text_body" type="Label" parent="HomeScene"]
margin_left = 80.0
margin_top = 180.0
margin_right = 1520.0
margin_bottom = 394.0
theme = ExtResource( 5 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 4 )
text = "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut commodo quam vitae lectus ullamcorper, at ullamcorper libero dapibus. Praesent condimentum tortor non nunc imperdiet faucibus. Sed et mollis leo, quis scelerisque neque. Nulla id risus id justo vulputate blandit non vitae orci. Nulla in mi purus. Quisque vitae tortor in augue laoreet dignissim non ut sem. Cras pulvinar accumsan felis, ac commodo justo finibus vel. Proin quis viverra ex. Aliquam auctor ultricies lorem, vel venenatis turpis viverra condimentum. Phasellus consequat venenatis elit et Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut commodo quam vitae lectus ullamcorper, at ullamcorper libero dapibus. Praesent condimentum tortor non nunc imperdiet faucibus. Sed et mollis leo, quis scelerisque neque. Nulla id risus id justo vulputate blandit non vitae orci. Nulla in mi purus. Quisque vitae tortor in augue laoreet dignissim non ut sem. Cras pulvinar accumsan felis, ac commodo justo finibus vel. Proin quis viverra ex. Aliquam auctor ultricies lorem, vel venenatis turpis viverra condimentum. Phasellus consequat venenatis elit et"
align = 3
autowrap = true

[node name="Decks" type="Node2D" parent="HomeScene"]

[node name="DeckSelector_general" parent="HomeScene/Decks" instance=ExtResource( 1 )]
margin_left = 74.0
margin_top = 502.0
margin_right = 334.0
margin_bottom = 852.0
rect_scale = Vector2( 1, 1 )

[node name="DeckSelector_business" parent="HomeScene/Decks" instance=ExtResource( 1 )]
margin_left = 364.0
margin_top = 502.0
margin_right = 624.0
margin_bottom = 852.0
rect_scale = Vector2( 1, 1 )

[node name="DeckSelector_hardware" parent="HomeScene/Decks" instance=ExtResource( 1 )]
margin_left = 654.0
margin_top = 502.0
margin_right = 914.0
margin_bottom = 852.0
rect_scale = Vector2( 1, 1 )

[node name="DeckSelector_software" parent="HomeScene/Decks" instance=ExtResource( 1 )]
margin_left = 944.0
margin_top = 502.0
margin_right = 1204.0
margin_bottom = 852.0
rect_scale = Vector2( 1, 1 )

[node name="DeckSelector_legal" parent="HomeScene/Decks" instance=ExtResource( 1 )]
margin_left = 1234.0
margin_top = 502.0
margin_right = 1494.0
margin_bottom = 852.0
rect_scale = Vector2( 1, 1 )

[node name="label_1" type="Label" parent="HomeScene/Decks"]
margin_left = 74.0
margin_top = 430.0
margin_right = 334.0
margin_bottom = 489.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 20 )
text = "General"
align = 1

[node name="deck_done" type="Sprite" parent="HomeScene/Decks/label_1"]
visible = false
position = Vector2( 128, 426 )
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 7 )

[node name="label_2" type="Label" parent="HomeScene/Decks"]
margin_left = 364.0
margin_top = 430.0
margin_right = 624.0
margin_bottom = 489.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 20 )
text = "Business"
align = 1

[node name="deck_done" type="Sprite" parent="HomeScene/Decks/label_2"]
visible = false
position = Vector2( 128, 426 )
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 7 )

[node name="label_3" type="Label" parent="HomeScene/Decks"]
margin_left = 654.0
margin_top = 430.0
margin_right = 914.0
margin_bottom = 489.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 20 )
text = "Hardware"
align = 1

[node name="deck_done" type="Sprite" parent="HomeScene/Decks/label_3"]
visible = false
position = Vector2( 128, 426 )
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 7 )

[node name="label_4" type="Label" parent="HomeScene/Decks"]
margin_left = 944.0
margin_top = 430.0
margin_right = 1204.0
margin_bottom = 489.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 20 )
text = "Software"
align = 1

[node name="deck_done" type="Sprite" parent="HomeScene/Decks/label_4"]
visible = false
position = Vector2( 128, 426 )
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 7 )

[node name="label_5" type="Label" parent="HomeScene/Decks"]
margin_left = 1234.0
margin_top = 430.0
margin_right = 1494.0
margin_bottom = 489.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 20 )
text = "Legal"
align = 1

[node name="deck_done" type="Sprite" parent="HomeScene/Decks/label_5"]
visible = false
position = Vector2( 128, 426 )
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 7 )

[node name="tutorial" type="Node2D" parent="HomeScene"]

[node name="Label" type="Label" parent="HomeScene/tutorial"]
margin_left = 1258.0
margin_top = 362.0
margin_right = 1590.0
margin_bottom = 410.0
theme = ExtResource( 5 )
custom_colors/font_color = Color( 0.917647, 0.231373, 0.231373, 1 )
custom_fonts/font = SubResource( 22 )
text = "Select a deck to begin"

[node name="Sprite" type="Sprite" parent="HomeScene/tutorial"]
position = Vector2( 1531, 518 )
rotation = 2.56389
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 10 )
flip_v = true

[node name="CardScene" type="Node2D" parent="."]
visible = false

[node name="pos_card" type="Position2D" parent="CardScene"]
position = Vector2( 543, 218 )

[node name="pos_deck" type="Position2D" parent="CardScene"]
position = Vector2( 1222, 499 )

[node name="bg_grey_1" type="ColorRect" parent="CardScene"]
margin_top = 600.0
margin_right = 1600.0
margin_bottom = 900.0
color = Color( 0.627451, 0.627451, 0.627451, 1 )

[node name="bg_grey_2" type="ColorRect" parent="CardScene"]
margin_top = 600.0
margin_right = 1600.0
margin_bottom = 610.0
color = Color( 0.490196, 0.490196, 0.490196, 1 )

[node name="tutorial" type="Node2D" parent="CardScene"]

[node name="Label" type="Label" parent="CardScene/tutorial"]
margin_left = 801.0
margin_top = 353.0
margin_right = 1068.0
margin_bottom = 455.0
theme = ExtResource( 5 )
custom_colors/font_color = Color( 0.917647, 0.231373, 0.231373, 1 )
custom_fonts/font = SubResource( 22 )
text = "Click on deck to draw a card"
autowrap = true

[node name="Sprite" type="Sprite" parent="CardScene/tutorial"]
position = Vector2( 1062, 529 )
rotation = -0.0593412
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 10 )

[node name="tutorial2" type="Node2D" parent="CardScene"]

[node name="Label" type="Label" parent="CardScene/tutorial2"]
margin_left = 397.0
margin_top = 259.0
margin_right = 664.0
margin_bottom = 361.0
theme = ExtResource( 5 )
custom_colors/font_color = Color( 0.917647, 0.231373, 0.231373, 1 )
custom_fonts/font = SubResource( 22 )
text = "View summary of answers"
autowrap = true

[node name="Sprite" type="Sprite" parent="CardScene/tutorial2"]
position = Vector2( 344, 205 )
rotation = -4.31969
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 10 )
flip_h = true

[node name="SpriteLegal" type="Sprite" parent="CardScene"]
visible = false
position = Vector2( 200, 450 )
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 3 )
__meta__ = {
"_editor_description_": "	"
}

[node name="SpriteGeneral" type="Sprite" parent="CardScene"]
visible = false
position = Vector2( 200, 488 )
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 9 )

[node name="SpriteBusiness" type="Sprite" parent="CardScene"]
visible = false
position = Vector2( 200, 450 )
scale = Vector2( 0.2, 0.2 )
texture = SubResource( 7 )

[node name="SpriteHardware" type="Sprite" parent="CardScene"]
visible = false
position = Vector2( 200, 450 )
scale = Vector2( 0.2, 0.2 )
texture = SubResource( 8 )

[node name="SpriteSoftware" type="Sprite" parent="CardScene"]
visible = false
position = Vector2( 240, 450 )
scale = Vector2( 0.2, 0.2 )
texture = SubResource( 9 )

[node name="text_title" type="Label" parent="CardScene"]
margin_left = 1204.0
margin_top = 320.0
margin_right = 1500.0
margin_bottom = 379.0
theme = ExtResource( 5 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 14 )
text = "Legal"
align = 1

[node name="text_question_no" type="Label" parent="CardScene"]
margin_left = 1202.0
margin_top = 375.0
margin_right = 1500.0
margin_bottom = 411.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 15 )
text = "Question 2 / 20"
align = 1

[node name="ProgressBar" type="ProgressBar" parent="CardScene"]
margin_left = 1201.0
margin_top = 417.0
margin_right = 1501.0
margin_bottom = 457.0
step = 1.0
rounded = true
percent_visible = false

[node name="draw_deck" type="Node2D" parent="CardScene"]

[node name="Back_Button" type="Button" parent="CardScene"]
margin_left = 40.0
margin_top = 40.0
margin_right = 220.0
margin_bottom = 100.0
text = "Back"

[node name="Summary_Button" type="Button" parent="CardScene"]
margin_left = 250.0
margin_top = 40.0
margin_right = 430.0
margin_bottom = 100.0
text = "Summary"

[node name="SummaryScene" type="Node2D" parent="."]

[node name="tutorial" type="Node2D" parent="SummaryScene"]
position = Vector2( 1.52588e-05, 0 )
scale = Vector2( 1, 1 )

[node name="Label" type="Label" parent="SummaryScene/tutorial"]
margin_left = 17.0
margin_top = 103.0
margin_right = 281.0
margin_bottom = 253.0
theme = ExtResource( 5 )
custom_colors/font_color = Color( 0.917647, 0.231373, 0.231373, 1 )
custom_fonts/font = SubResource( 22 )
text = "Click completed cards to review answers."
autowrap = true

[node name="Sprite" type="Sprite" parent="SummaryScene/tutorial"]
position = Vector2( 176, 270 )
rotation = -0.932006
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 10 )

[node name="Sprite" type="Sprite" parent="SummaryScene"]
position = Vector2( 138.815, 475 )
scale = Vector2( 0.13, 0.106 )
texture = ExtResource( 6 )

[node name="text_title" type="Label" parent="SummaryScene"]
margin_left = 80.0
margin_top = 80.0
margin_right = 1520.0
margin_bottom = 167.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 12 )
text = "Summary"
align = 1

[node name="deck_label" type="Label" parent="SummaryScene"]
margin_left = 67.815
margin_top = 310.0
margin_right = 209.815
margin_bottom = 353.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 13 )
text = "Business"
align = 1

[node name="summ_deck" type="Node2D" parent="SummaryScene"]

[node name="pos_summ" type="Position2D" parent="SummaryScene"]
position = Vector2( 272, 174 )

[node name="Summ_Back_Button" type="Button" parent="SummaryScene"]
margin_left = 250.0
margin_top = 40.0
margin_right = 430.0
margin_bottom = 100.0
text = "Back"

[node name="CardZoom" type="Node2D" parent="SummaryScene"]
visible = false

[node name="ColorRect" type="ColorRect" parent="SummaryScene/CardZoom"]
margin_right = 1600.0
margin_bottom = 900.0
color = Color( 0, 0, 0, 0.760784 )

[node name="BackButton" type="Button" parent="SummaryScene/CardZoom"]
margin_right = 1600.0
margin_bottom = 900.0
flat = true

[node name="CardZoomed" parent="SummaryScene/CardZoom" instance=ExtResource( 8 )]
margin_left = 682.0
margin_top = 278.0
margin_right = 932.0
margin_bottom = 628.0

[node name="LastCardButton" type="Button" parent="SummaryScene/CardZoom"]
margin_left = 622.0
margin_top = 423.0
margin_right = 672.0
margin_bottom = 473.0
icon = SubResource( 10 )
flat = true
expand_icon = true

[node name="NextCardButton" type="Button" parent="SummaryScene/CardZoom"]
margin_left = 942.0
margin_top = 423.0
margin_right = 992.0
margin_bottom = 473.0
icon = SubResource( 11 )
flat = true
expand_icon = true

[connection signal="button_up" from="CardScene/Back_Button" to="." method="_on_Button_button_up"]
[connection signal="button_up" from="CardScene/Summary_Button" to="." method="_on_Summary_Button_button_up"]
[connection signal="button_up" from="SummaryScene/Summ_Back_Button" to="." method="_on_Summ_Back_Button_button_up"]
[connection signal="button_up" from="SummaryScene/CardZoom/BackButton" to="." method="_on_BackButton_button_up"]
[connection signal="button_up" from="SummaryScene/CardZoom/LastCardButton" to="." method="_on_LastCardButton_button_up"]
[connection signal="button_up" from="SummaryScene/CardZoom/NextCardButton" to="." method="_on_NextCardButton_button_up"]
